errors.txt
munmap_chunk(): invalid pointer - means memory is allocated incorrectly and that memory is also freed incorrectly 
happens as follows :
        1. munmap_chunk(): invalid pointer is a runtime error from free() in C.
It means the program tried to free memory incorrectly. The memory manager detected that the pointer you passed to free() is not a valid heap pointer.

This happens when you misuse malloc/free.

1. Freeing Memory That Was Not Allocated

Example:

#include <stdlib.h>

int main() {
    int x;
    free(&x);   // ❌ wrong
}

x is on the stack, not the heap.

✔ Only memory created with malloc, calloc, or realloc should be freed.

2. Double Free

Freeing the same pointer twice.

int *p = malloc(sizeof(int));

free(p);
free(p);   // ❌ error

Fix:

free(p);
p = NULL;
3. Freeing a Shifted Pointer

This is very common.

int *p = malloc(5 * sizeof(int));

p++;        // pointer moved

free(p);    // ❌ invalid pointer

You must free the original pointer returned by malloc.

Correct:

int *p = malloc(5 * sizeof(int));
int *temp = p;

temp++;   // move temp, not p

free(p);
4. Memory Corruption (Out-of-Bounds Write)

Example:

int *arr = malloc(5 * sizeof(int));

arr[5] = 10;   // ❌ outside allocated memory
free(arr);

This can corrupt the heap and trigger:

munmap_chunk(): invalid pointer
5. Freeing an Uninitialized Pointer
int *p;
free(p);   // ❌ p was never malloc'd

Always initialize:

int *p = NULL;
6. Mismatched Allocation
char *p = malloc(10);

free(p + 2);   // ❌ wrong pointer

Only free the exact pointer returned by malloc.

Quick Debug Checklist

Whenever you see:

munmap_chunk(): invalid pointer

Check:

1️⃣ Was the pointer allocated with malloc?
2️⃣ Did you modify the pointer before free?
3️⃣ Did you free it twice?
4️⃣ Did you write outside allocated memory?
5️⃣ Did you free stack memory?

Useful Debugging Tool

Compile with:

gcc program.c -fsanitize=address -g

AddressSanitizer will show exactly where the bug happened.

        2. dont name a function and a variable the same name
dynamic_alloc.c:32:15: error: called object ‘sum’ is not a function or function pointer
   32 |     int sum = sum(arr, n) ;
      |               ^~~
dynamic_alloc.c:32:9: note: declared here
   32 |     int sum = sum(arr, n) ;

    3. Invalid initializer (the compiler error)

This line is illegal:

char str2[100] = strcpyy(str);

In C, arrays cannot be assigned like this.
Only initialization with constants is allowed.

Example allowed:

char str2[100] = "hello";

But not from a function return.

Fix

Since your function returns a char*, use a pointer:

char *str2 = strcpyy(str);